--- a/SabadBan/SabadBan/IndexHeader.xib
+++ b/SabadBan/SabadBan/IndexHeader.xib
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IndexTableViewController" customModule="SabadBanDev" customModuleProvider="target"/>
@@ -15,26 +16,30 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IiM-tW-7n0">
                     <rect key="frame" x="0.0" y="0.0" width="571" height="73"/>
                     <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="percent" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBh-Vu-QuM">
+                            <rect key="frame" x="8" y="0.0" width="82" height="53"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cunt" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKM-wb-f4y">
+                            <rect key="frame" x="95" y="0.0" width="95" height="53"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Index" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKh-dB-zAj">
-                            <rect key="frame" x="505" y="18" width="42" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="percent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBh-Vu-QuM">
-                            <rect key="frame" x="12" y="18" width="59" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cunt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKM-wb-f4y">
-                            <rect key="frame" x="121" y="18" width="37" height="21"/>
+                            <rect key="frame" x="505" y="0.0" width="42" height="53"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ayU-uk-z6P">
-                            <rect key="frame" x="8" y="52" width="539" height="21"/>
+                            <rect key="frame" x="0.0" y="53" width="571" height="20"/>
+                            <color key="backgroundColor" red="0.090196078430000007" green="0.13725490200000001" blue="0.25098039220000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="ytb-hB-7Wv"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.99044573739999997" green="1" blue="0.95424887199999997" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -42,20 +47,20 @@
                     </subviews>
                     <color key="backgroundColor" red="0.16452825085752149" green="0.21934768017884673" blue="0.3188829919472469" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="mKM-wb-f4y" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="trailing" constant="5" id="0ZP-fi-2q4"/>
+                        <constraint firstItem="ayU-uk-z6P" firstAttribute="top" secondItem="gBh-Vu-QuM" secondAttribute="bottom" id="9G5-BS-bID"/>
                         <constraint firstAttribute="bottom" secondItem="ayU-uk-z6P" secondAttribute="bottom" id="DkW-On-Zaa"/>
-                        <constraint firstItem="mKM-wb-f4y" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="trailing" constant="50" id="EvE-gZ-MIt">
-                            <variation key="heightClass=regular-widthClass=regular" constant="118"/>
-                        </constraint>
-                        <constraint firstItem="ayU-uk-z6P" firstAttribute="trailing" secondItem="oKh-dB-zAj" secondAttribute="trailing" id="KHO-a1-3mK"/>
-                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="centerY" secondItem="IiM-tW-7n0" secondAttribute="centerY" constant="-8" id="Wkz-uc-nB3"/>
-                        <constraint firstItem="mKM-wb-f4y" firstAttribute="baseline" secondItem="oKh-dB-zAj" secondAttribute="baseline" id="egh-bR-VRz"/>
-                        <constraint firstItem="ayU-uk-z6P" firstAttribute="leading" secondItem="gBh-Vu-QuM" secondAttribute="leading" constant="-4" id="pAJ-DP-rW9"/>
-                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="baseline" secondItem="mKM-wb-f4y" secondAttribute="baseline" id="r7x-uT-cDG"/>
-                        <constraint firstAttribute="trailing" secondItem="oKh-dB-zAj" secondAttribute="trailing" constant="24" id="v2J-nH-uWN"/>
-                        <constraint firstItem="ayU-uk-z6P" firstAttribute="top" secondItem="mKM-wb-f4y" secondAttribute="bottom" constant="13" id="xOA-b6-veG"/>
-                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="leading" secondItem="IiM-tW-7n0" secondAttribute="leadingMargin" constant="4" id="yog-Jx-FqS">
-                            <variation key="heightClass=regular-widthClass=regular" constant="25"/>
-                        </constraint>
+                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="top" secondItem="IiM-tW-7n0" secondAttribute="top" id="Hka-8A-4Sl"/>
+                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="width" secondItem="IiM-tW-7n0" secondAttribute="width" multiplier="1:7" id="ItO-wQ-YXf"/>
+                        <constraint firstItem="mKM-wb-f4y" firstAttribute="width" secondItem="IiM-tW-7n0" secondAttribute="width" multiplier="1:6" id="L7G-NO-p8Y"/>
+                        <constraint firstItem="oKh-dB-zAj" firstAttribute="top" secondItem="IiM-tW-7n0" secondAttribute="top" id="Q3T-i1-hxI"/>
+                        <constraint firstItem="ayU-uk-z6P" firstAttribute="leading" secondItem="IiM-tW-7n0" secondAttribute="leading" id="Uge-qJ-Jmc"/>
+                        <constraint firstAttribute="trailing" secondItem="ayU-uk-z6P" secondAttribute="trailing" id="Y2v-46-oH6"/>
+                        <constraint firstItem="gBh-Vu-QuM" firstAttribute="leading" secondItem="IiM-tW-7n0" secondAttribute="leadingMargin" id="cv9-Vd-c6N"/>
+                        <constraint firstItem="ayU-uk-z6P" firstAttribute="top" secondItem="mKM-wb-f4y" secondAttribute="bottom" id="gBp-ly-mVw"/>
+                        <constraint firstAttribute="trailing" secondItem="oKh-dB-zAj" secondAttribute="trailing" constant="24" id="soQ-hV-ZtM"/>
+                        <constraint firstAttribute="bottom" secondItem="oKh-dB-zAj" secondAttribute="bottom" constant="20" id="tma-jB-mMc"/>
+                        <constraint firstItem="mKM-wb-f4y" firstAttribute="top" secondItem="IiM-tW-7n0" secondAttribute="top" id="zAa-hP-hRa"/>
                     </constraints>
                 </view>
             </subviews>
