--- a/SabadBan/SabadBan/en.lproj/LaunchScreen.storyboard
+++ b/SabadBan/SabadBan/en.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -23,14 +23,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" image="AppLogo" translatesAutoresizingMaskIntoConstraints="NO" id="yoI-lE-ZNk">
-                                <rect key="frame" x="200" y="190" width="200" height="220"/>
+                                <rect key="frame" x="200" y="180" width="200" height="240"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="220" id="Cva-ah-20J"/>
+                                    <constraint firstAttribute="height" constant="240" id="Cva-ah-20J"/>
                                     <constraint firstAttribute="width" constant="200" id="kHj-7j-MNi"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="اولین اپلیکیشن خبری  تحلیلی بورس در ایران" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SEp-3b-9eG">
-                                <rect key="frame" x="183" y="418" width="234" height="95"/>
+                                <rect key="frame" x="183" y="428" width="234" height="85"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="234" id="Djq-eO-8Xm"/>
                                 </constraints>
